home-cluster/ai-services/ingressroute-dolphin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dolphin-llama3
  namespace: ai-services
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dolphin-llama3.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dolphin-llama3.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: ollama
          port: 11434
  tls: {}
